# ccsilo

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.codex/: config.toml
.github/workflows/: ci.yml  release.yml  update-prompts.yml
cc_extractor/: __main__.py  variant_tweaks.py
cc_extractor/binary_patcher/: __init__.py  bun_compat.py  js_patch.py
cc_extractor/cli/: parsers.py  payloads.py
cc_extractor/data/: download-index.seed.json
cc_extractor/patches/: __init__.py  _pinned_default.py  patches_applied_indication.py  session_memory.py  suppress_line_numbers.py  suppress_model_launch_notice.py  suppress_prompt_caching_warning.py
cc_extractor/tui/: __init__.py  dispatch.py  options_tweaks.py  options_variant.py  render_frame.py  render_labels.py  setup_actions.py  state.py  (+1 more)
ccsilo/: __main__.py  _version.py  download_index.py  downloader.py  model_proxy.py  variant_tweaks.py
docs/: CCR.md  PROMPTS.md  RELEASE.md  THIRD_PARTY_NOTICES.md  patches.md
prompts/: 2.1.128.json  2.1.129.json  2.1.131.json  2.1.132.json  2.1.133.json  2.1.144.json  2.1.145.json  2.1.146.json  2.1.147.json  2.1.148.json  2.1.149.json  2.1.150.json  2.1.152.json  2.1.153.json  2.1.154.json  2.1.156.json  2.1.157.json  2.1.158.json  2.1.159.json  2.1.160.json  2.1.161.json  2.1.162.json  2.1.163.json  2.1.165.json  2.1.166.json  2.1.167.json  2.1.168.json  2.1.169.json  2.1.170.json  2.1.172.json  2.1.173.json  2.1.174.json  2.1.175.json  2.1.177.json  2.1.178.json  2.1.179.json  2.1.181.json  2.1.182.json  2.1.183.json  2.1.185.json  (+29 more)
tests/: test_anyllm_managed.py  test_anyllm_provider.py  test_binary_patcher_bun_compat.py  test_binary_patcher_js_patch.py  test_binary_patcher_theme.py  test_binary_patcher_unpack_and_patch.py  test_bun_extract.py  test_download_index.py  test_downloader.py  test_model_proxy.py  test_package.py  test_patch_release_check.py  test_providers.py  test_statusline_assets.py  test_suggest_prompt_metadata.py  test_tui.py  test_variant_tweaks.py  test_variants.py
tools/: check_patch_releases.py  suggest_prompt_metadata.py
(+206 files in other folders)
