[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ccsilo"
version = "0.11.2"
description = "Isolated Claude Code silos with provider-specific patching"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "ratatui>=0.4.2",
    "tqdm>=4.66.0",
]
authors = [
    { name = "whit3rabbit" },
]
license = "MIT"
classifiers = [
    "Intended Audience :: Developers",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/whit3rabbit/ccsilo"
Repository = "https://github.com/whit3rabbit/ccsilo"
Issues = "https://github.com/whit3rabbit/ccsilo/issues"
Documentation = "https://github.com/whit3rabbit/ccsilo#readme"

[project.optional-dependencies]
dev = [
    "build>=1.2.0",
    "pytest>=7.4.0",
    "ruff>=0.8.0",
    "tree-sitter>=0.25.0",
    "tree-sitter-javascript>=0.25.0",
    "twine>=5.0.0",
]

[project.scripts]
ccsilo = "ccsilo.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ccsilo*"]

[tool.setuptools.package-data]
ccsilo = [
    "data/*.json",
    "data/statusline/yet-another-statusline/*",
    "data/statusline/yet-another-statusline/statusline/*.py",
    "providers/registry/*.json",
    "providers/registry/*/*.json",
    "variants/ascii/*.txt",
]

[tool.ruff.lint.per-file-ignores]
"ccsilo/data/statusline/yet-another-statusline/statusline_command.py" = ["E701", "F841"]
